src/examples/invalid/dynamic/array-list-negative.ra
func main(): void {
  a = declare_arr<int>(3);
  a[0] = 0;
  a[a[0] - 1] = 0;
  print(a[0]);
}
